<resources>
    <string name="app_name">Project-livrable</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_Username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_register">Register</string>
    <string name="prompt_login">Login</string>
    <string-array name="role">
        <item>Employé(e)</item>
        <item>Client</item>
    </string-array>
    <string-array name="sort">
        <item>Adresse</item>
        <item>Heure de travail</item>
        <item>Services</item>
    </string-array>
</resources>