<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.livrable3.Register_and_Login.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="295dp"
            android:gravity="center"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="215dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/FirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_firstName"
                android:inputType="textPersonName"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/LastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_lastName"
                android:inputType="textPersonName"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/Username2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_Username"
                android:inputType="textPersonName"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/Password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingTop="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/Register2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="registerdInfo"
                android:text="@string/prompt_register" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>